<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbarStyle="outsideInset"
    tools:context=".activity_Crud_Productos">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <Button
            android:id="@+id/btnRecuperar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:backgroundTint="@drawable/botondisabled"
            android:enabled="false"
            android:text="@string/recuperar"
            android:textAllCaps="true"
            android:textColor="#fff"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/btnConsultarProducto"
            app:layout_constraintEnd_toEndOf="@+id/btnModificar"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@+id/btnConsultarProducto"
            app:layout_constraintTop_toTopOf="@+id/btnConsultarProducto" />

        <Button
            android:id="@+id/btnConsultarProducto"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="#6B309E"
            android:text="@string/consultar_producto"
            android:textAllCaps="true"
            android:textColor="#fff"
            android:textSize="15sp"


            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnRecuperar"
            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintTop_toBottomOf="@+id/btnBorrar"
            app:layout_constraintVertical_bias="0.100000024" />

        <Button
            android:id="@+id/btnBorrar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="@drawable/botondisabled"
            android:enabled="false"
            android:text="@string/borrar"
            android:textAllCaps="true"
            android:textColor="#fff"

            android:textSize="16sp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnModificar"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnGrabar"
            app:layout_constraintVertical_bias="0.057" />

        <Button
            android:id="@+id/btnModificar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:backgroundTint="@drawable/botondisabled"
            android:enabled="false"
            android:text="@string/modificar"
            android:textAllCaps="true"
            android:textColor="#fff"
            android:textSize="16sp"


            app:layout_constraintBottom_toBottomOf="@+id/btnBorrar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnBorrar"
            app:layout_constraintTop_toTopOf="@+id/btnBorrar"
            app:layout_constraintVertical_bias="0.76" />

        <Button
            android:id="@+id/btnLimpiarPaquete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:backgroundTint="#6B309E"
            android:text="@string/limpiar"
            android:textAllCaps="true"
            android:textColor="#fff"
            android:textSize="16sp"


            app:layout_constraintBottom_toBottomOf="@+id/btnGrabar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnGrabar"
            app:layout_constraintTop_toTopOf="@+id/btnGrabar" />

        <Button
            android:id="@+id/btnGrabar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="@drawable/botondisabled"
            android:text="@string/grabar"
            android:textAllCaps="true"
            android:textColor="#FFFFFF"

            android:textSize="16sp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnLimpiarPaquete"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/Paquetes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/gradientelogo"
            android:elegantTextHeight="true"
            android:fontFamily="sans-serif-condensed"
            android:paddingStart="20dp"
            android:paddingTop="20dp"
            android:paddingEnd="0dp"
            android:paddingBottom="20dp"
            android:text="@string/productos"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutNumeroCuenta"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="10dp"

            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toStartOf="@id/swModificar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Paquetes"
            app:layout_constraintVertical_bias="0.0">

            <EditText
                android:id="@+id/txtIDProducto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:hint="@string/producto_id"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="6"
                android:text="@string/Asterisco"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutNombreCuenta"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutNumeroCuenta"
            app:layout_constraintVertical_bias="0.04">


            <EditText
                android:id="@+id/txtProducto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nombre_producto"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutCargo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutNombreCuenta"
            app:layout_constraintVertical_bias="0.055">

            <EditText
                android:id="@+id/txtPrecioUnitario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/precio_unitario"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutUnidades"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutCargo"
            app:layout_constraintVertical_bias="0.055">

            <EditText
                android:id="@+id/txtUnidades"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/unidades_del_producto"
                android:importantForAutofill="no"
                android:inputType="number"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="407dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_begin="465dp"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:background="@drawable/boton"
            android:text="@string/back"
            android:textAllCaps="true"

            android:textSize="16sp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.063"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnConsultarProducto"
            app:layout_constraintVertical_bias="0.636" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/swModificar"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginEnd="15dp"
            app:trackTint="@drawable/switch_track_tint"
            app:thumbTint="@drawable/switch_thumb_tint"

            app:layout_constraintBottom_toBottomOf="@+id/textInputLayoutNumeroCuenta"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textInputLayoutNumeroCuenta"
            app:layout_constraintTop_toTopOf="@+id/textInputLayoutNumeroCuenta" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>